# Davie-Robot-Arm

./: .gitignore  .gitignore.txt  README.md
3D Models/: Arm1.ipt  Arm1_2servos.ipt  Arm1_new.ipt  Arm2.dwg  Arm2.ipt  Arm3.ipt  Arm4.ipt  Assembly2.iam  Axis1.ipt  Axis1_bottom.ipt  Axis1_shaft_v2.ipt  Axis1_top.ipt  Axis1_top_v2.ipt  Base.ipt  Base_bottom_v2.ipt  Base_top.ipt  Base_v3.ipt  Cover_v2.ipt  Full_model.dwg  Full_model.iam  Shaft.ipt  arm2_new.ipt  axis_shaft.ipt  full_axis.iam  top_base.iam  ~Full_model.dwg.23512.tmp
3D Models/Assemblies/: Base_3.iam  New base.iam
3D Models/Component models/: Gear drive.ipt  Slip_ring.ipt  Stepper.ipt  small_bearing.ipt
3D Models/OldVersions/: Arm1.0002.ipt  Arm1_1.0004.ipt  Arm1_2servos.0004.ipt  Arm1_new.0012.ipt  Arm2.0001.dwg  Arm2.0025.ipt  Arm2.0029.ipt  Arm2.0031.ipt  Arm2.0034.ipt  Arm2.0041.ipt  Arm2_2SERVO.0002.ipt  (+47 more)
3D_Models/: Arm1.ipt  Arm2.ipt  Arm3.ipt  Arm4.ipt  Axis1_shaft.ipt  Base_bottom.ipt  Base_bottov4.ipt  Base_top.ipt  calibration_tool.ipt  calibration_tool_v2.ipt  long_rod.ipt  motherboard.ipt  short_rod.ipt
Documentation/: Diagrams.pptx
PCB/: PCB.kicad_pro  PCB.kicad_sch
Raspberry Test files/: controller_test.py  pca9685_calilbration.py
david_ws/: frames_2025-11-15_11.10.46.gv  frames_2025-11-27_08.39.21.gv  frames_2025-12-10_12.15.33.gv
david_ws/src/david_robot_arm_pkg/: package.xml  setup.cfg  setup.py
david_ws/src/david_robot_arm_pkg/david_robot_arm_pkg/: controller_test_node.py  keyboard_controll_node.py  my_node.py  receiver_node.py  servo_node.py
davie_ws/: .gitignore
(+379 files in other folders)
